--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@my_name_is_nero/rn-start-js",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "CLI for adding default folders to RN project.",
   "main": "src/index.js",
   "bin": {
     "rn-init": "bin/rn-start-js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NeRo8/rn-start-js.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
