--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@my_name_is_nero/rn-start-js",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "CLI for adding default folders to RN project.",
   "main": "src/index.js",
   "bin": {
@@ -23,6 +23,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^4.1.0",
-    "esm": "^3.2.25"
+    "esm": "^3.2.25",
+    "fs-extra": "^9.0.1"
   }
 }
